Fix deprecated new Double(String)