@@ -152,7 +152,7 @@ public class PayBoxService {
 
 	public PayBoxForm getPayBoxForm(String mail, String field1, String field2, double montant, PayEvtMontant payEvtMontant, 
 			String billingFirstname, String billingLastname, String billingAddress1, String billingZipCode, String billingCity, String billingCountryCode) {
-        String montantAsCents = Long.toString(Math.round(new Double(montant * 100)));
+        String montantAsCents = Long.toString(Math.round(Double.valueOf(montant * 100)));
         PayBoxForm payBoxForm = new PayBoxForm();
         payBoxForm.setActionUrl(getPayBoxActionUrl());
         payBoxForm.setClientEmail(mail);
